--- a/App15/App15/Resources/layout/activity_main.xml
+++ b/App15/App15/Resources/layout/activity_main.xml
@@ -10,24 +10,25 @@
         android:inputType="number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"
         android:id="@+id/edittext"
+        android:maxLength="1" 
         />
     <Button
         android:text="Groep indelen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="80dp"
         android:layout_marginLeft="15dp"
         android:id="@+id/button1" />
     <TextView
-        android:text="HelloWorld!"
+        android:text="Groepen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minWidth="25px"
         android:minHeight="25px"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="130dp"
         android:layout_marginLeft="15dp"
         android:clickable="true"
         android:onClick="editText1"
