--- a/App15/App15/Resources/layout/activity_main.xml
+++ b/App15/App15/Resources/layout/activity_main.xml
@@ -23,18 +23,6 @@
         android:layout_marginTop="80dp"
         android:layout_marginLeft="15dp"
         android:id="@+id/button1" />
-    <TextView
-        android:text="Groepen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_marginTop="130dp"
-        android:layout_marginLeft="15dp"
-        android:clickable="true"
-        android:onClick="editText1"
-        android:scrollHorizontally="false"
-        android:id="@+id/Textview"/>
     <Button
         android:layout_width="110dp"
         android:layout_height="wrap_content"
@@ -42,6 +30,13 @@
         android:layout_marginLeft="290dp"
         android:id="@+id/button2"
         android:text="Darkmode" 
- />
+     />
 
+    <ListView
+        android:id="@+id/listview_groups"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="0.0dp"
+        android:layout_marginTop="125dp"                 
+    />
 </RelativeLayout>
