--- a/App15/App15/Resources/layout/activity_main.xml
+++ b/App15/App15/Resources/layout/activity_main.xml
@@ -29,7 +29,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="290dp"
         android:id="@+id/button2"
-        android:text="Darkmode" 
+        android:text="Darkmode"
+        android:layout_alignParentRight="true" 
      />
 
     <ListView
